<resources>
    <string name="app_name">Fitagotchi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_regster">Register</string>
    <string name="login_sign_in">Sign in</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="appName">Fitagotchi</string>
    <string name="profile_edit_title">Edit Your Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="edit_profile_confirm">Confirm</string>

    <string name="title_profile">Profile</string>
    <string name="title_pet">Pet</string>
    <string name="title_excerices">Excerices</string>
    <string name="title_shop">Shop</string>
    <string name="profile_BMI">BMI</string>
    <string name="profile_activity_level">Activity Level</string>
    <string name="profile_BMR">BMR</string>
    <string name="profile_gender">Gender</string>
    <string name="pet_title">Pet</string>
    <string name="text_excercises">Excercises For Today</string>
    <string name="Edit">Edit</string>


</resources>
