<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_profile" />

            <TextView
                android:id="@+id/profile_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/profile_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/profile_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender" />

            <TextView
                android:id="@+id/profile_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <TextView
                android:id="@+id/profile_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/profile_activity_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_level" />

            <TextView
                android:id="@+id/profile_BMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_BMI" />

            <TextView
                android:id="@+id/profile_BMR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_BMR" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>